@@ -21,7 +21,7 @@
         "twig/twig": "^1.23.1",
         "doctrine/common": "2.5.*",
         "doctrine/annotations": "1.2.*",
-        "guzzlehttp/guzzle": "~6.1",
+        "guzzlehttp/guzzle": "~6.2",
         "symfony-cmf/routing": "1.3.*",
         "easyrdf/easyrdf": "0.9.*",
         "zendframework/zend-feed": "~2.4",
