@@ -1,3 +1,7 @@
+Drupal 8.1.7, 2016-07-18
+------------------------
+- Fixed security issue. SA-CORE-2016-003.
+
 Drupal 8.1.3, 2016-06-15
 ------------------------
 - Fixed security issue. SA-CORE-2016-002.
